syntax = "proto3";

option csharp_namespace = "ClinicServiceNamespace";

import "google/protobuf/wrappers.proto";
import "google/api/annotations.proto";

package proto;

//Сервис клиники
service ClinicService{
	//Добавление клиента
	rpc CreateClient(CreateClientRequest) returns (CreateClientResponse);
	//Обновление клиента
	rpc UpdateClient(UpdateClientRequest) returns (UpdateClientResponse);
	//Удаление клиента
	rpc DeleteClient(DeleteClientRequest) returns (DeleteClientResponse);
	//Получение клиента по идентификатору
	rpc GetClientById(GetClientByIdRequest) returns (GetClientByIdResponse){
		option (google.api.http) = {
			get: "/api/clientById/{clientId}"
		};
	}
	//Получить список клиентов
	rpc GetClients(GetClientsRequest) returns (GetClientsResponse){
		option (google.api.http) = {
			get: "/api/clients"
		};
	}
}

//Параметры запроса на создание клиента
message CreateClientRequest{
	//Документ
	string document = 1;
	//Фамилия
	string surname = 2;
	//Имя
	string firstname = 3;
	//Отчество
	string patronymic = 4;
}

//Результат создания клиента
message CreateClientResponse{
	google.protobuf.Int32Value clientId = 1;
	int32 errorCode = 2;
	string errorMessage = 3;
}

message UpdateClientRequest{
	google.protobuf.Int32Value clientId = 1;
	string document = 2;
	string surname = 3;
	string firstname = 4;
	string patronymic = 5;
}

message UpdateClientResponse{
	int32 errorCode = 1;
	string errorMessage = 2;
}

message DeleteClientRequest{
	int32 clientId = 1;
}

message DeleteClientResponse{
	int32 errorCode = 1;
	string errorMessage = 2;
}

message GetClientByIdRequest{
	int32 clientId = 1;
}

message GetClientByIdResponse{
	ClientResponse client = 1;
	int32 errorCode = 2;
	string errorMessage = 3;
}

message GetClientsRequest{

}

message GetClientsResponse{
	repeated ClientResponse clients = 1;
	int32 errorCode = 2;
	string errorMessage = 3;
}

message ClientResponse{
	int32 clientId = 1;
	string document = 2;
	string surname = 3;
	string firstname = 4;
	string patronymic = 5;
}